What's New in Python 2.2a4?
===========================

Core

- The builtin file type can be subclassed now.  In the usual pattern,
  "file" is the name of the builtin type, and file() is a new builtin
  constructor, with the same signature as the builtin open() function.
  file() is now the preferred way to open a file.

- In 2.2a3, __new__ would only see sequential arguments passed to the
  type in a constructor call; __init__ would see both sequential and
  positional arguments.  This made no sense whatsoever any more, so
  now both __new__ and __init__ see all arguments.

- In 2.2a3, hash() applied to an instance of a subclass of str or unicode
  always returned 0.  This has been repaired.

- In 2.2a3, an operation on an instance of a subclass of an immutable type
  (int, long, float, complex, tuple, str, unicode), where the subtype
  didn't override the operation (and so the operation was handled by the
  builtin type), could return that instance instead a value of the base
  type.  For example, if s was of a str sublass type, s[:] returned s
  as-is.  Now it returns a str with the same value as s.

- Applications using Jim Fulton's ExtensionClass module can now safely
  be used with Python 2.2.  In particular, Zope 2.4.1 now works with
  Python 2.2 (as well as with Python 2.1.1).  The Demo/metaclass
  examples also work again.

- Thread scheduling on Solaris should be improved; it is no longer
  necessary to insert a small sleep at the start of a thread in order
  to let other runnable threads be scheduled.

Library

- The codecs module has grown four new helper APIs to access
  builtin codecs: getencoder(), getdecoder(), getreader(),
  getwriter().

- SimpleXMLRPCServer: a new module (based upon SimpleHTMLServer)
  simplifies writing XML RPC servers.

- os.path.realpath(): a new function that returns the absoute pathname
  after interpretation of symbolic links.  On non-Unix systems, this
  is an alias for os.path.abspath().
